@@ -1,5 +1,5 @@
 
-R version 2.7.0 Under development (unstable) (2007-09-11 r42820)
+R version 2.7.0 Under development (unstable) (2007-10-29 r43301)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -6063,4 +6063,65 @@ zero  one
 [1] "ABC" "DEF" ""    "GHI" "J"  
 > unlink(f)
 > ##
+> 
+> 
+> ## corner cases for cor
+> set.seed(1)
+> X <- cbind(NA, 1:3, rnorm(3))
+> cor(X, use = "complete")
+Error in cor(X, use = "complete") : no complete element pairs
+> try(cor(X, use = "complete", method="spearman"))
+Error in cor(X, use = "complete", method = "spearman") : 
+  no complete element pairs
+> try(cor(X, use = "complete", method="kendall"))
+Error in cor(X, use = "complete", method = "kendall") : 
+  no complete element pairs
+> cor(X, use = "pair")
+     [,1]       [,2]       [,3]
+[1,]   NA         NA         NA
+[2,]   NA  1.0000000 -0.2784939
+[3,]   NA -0.2784939  1.0000000
+> cor(X, use = "pair", method="spearman")
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA  1.0 -0.5
+[3,]   NA -0.5  1.0
+> cor(X, use = "pair", method="kendall")
+     [,1]       [,2]       [,3]
+[1,]   NA         NA         NA
+[2,]   NA  1.0000000 -0.3333333
+[3,]   NA -0.3333333  1.0000000
+> 
+> X[1,1] <- 1
+> cor(X, use = "complete")
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA   NA   NA
+[3,]   NA   NA   NA
+> cor(X, use = "complete", method="spearman")
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA   NA   NA
+[3,]   NA   NA   NA
+> cor(X, use = "complete", method="kendall")
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA   NA   NA
+[3,]   NA   NA   NA
+> cor(X, use = "pair")
+     [,1]       [,2]       [,3]
+[1,]   NA         NA         NA
+[2,]   NA  1.0000000 -0.2784939
+[3,]   NA -0.2784939  1.0000000
+> cor(X, use = "pair", method="spearman")
+     [,1] [,2] [,3]
+[1,]   NA   NA   NA
+[2,]   NA  1.0 -0.5
+[3,]   NA -0.5  1.0
+> cor(X, use = "pair", method="kendall")
+     [,1]       [,2]       [,3]
+[1,]   NA         NA         NA
+[2,]   NA  1.0000000 -0.3333333
+[3,]   NA -0.3333333  1.0000000
+> ## not consistent in 2.6.x
 > 
